--- a/becomedigitalsdk/src/main/res/layout/fragment_selec_country.xml
+++ b/becomedigitalsdk/src/main/res/layout/fragment_selec_country.xml
@@ -91,7 +91,8 @@
             android:layout_weight="1"
             android:orientation="vertical"
             android:padding="10dp"
-            android:visibility="gone">
+            android:visibility="gone"
+            tools:visibility="visible">
 
             <Button
                 android:id="@+id/btnPassport"
@@ -100,10 +101,12 @@
                 android:layout_height="match_parent"
                 android:background="@drawable/border_btn"
                 android:drawableStart="@drawable/passport_icon_btn"
+                android:drawableEnd="@drawable/arrownex_gray"
                 android:drawablePadding="20dp"
                 android:enabled="false"
                 android:gravity="left|center"
                 android:paddingLeft="20dp"
+                android:paddingRight="20dp"
                 android:text="@string/text_passport"
                 android:textColor="@color/grayLigth"
                 tools:ignore="RtlHardcoded,RtlSymmetry" />
@@ -116,7 +119,8 @@
             android:layout_weight="1"
             android:orientation="vertical"
             android:padding="10dp"
-            android:visibility="gone">
+            android:visibility="gone"
+            tools:visibility="visible">
 
             <Button
                 android:id="@+id/btnDNI"
@@ -125,10 +129,12 @@
                 android:layout_height="match_parent"
                 android:background="@drawable/border_btn"
                 android:drawableStart="@drawable/dni_icon_btn"
+                android:drawableEnd="@drawable/arrownex_gray"
                 android:drawablePadding="20dp"
                 android:enabled="false"
                 android:gravity="left|center"
                 android:paddingLeft="20dp"
+                android:paddingRight="20dp"
                 android:text="@string/text_dni_selec_document"
                 android:textColor="@color/grayLigth"
                 tools:ignore="RtlHardcoded,RtlSymmetry" />
@@ -141,7 +147,8 @@
             android:layout_weight="1"
             android:orientation="vertical"
             android:padding="10dp"
-            android:visibility="gone">
+            android:visibility="gone"
+            tools:visibility="visible">
 
             <Button
                 android:id="@+id/btnLicense"
@@ -150,10 +157,12 @@
                 android:layout_height="match_parent"
                 android:background="@drawable/border_btn"
                 android:drawableStart="@drawable/driver_icon_btn"
+                android:drawableEnd="@drawable/arrownex_gray"
                 android:drawablePadding="20dp"
                 android:enabled="false"
                 android:gravity="left|center"
                 android:paddingLeft="20dp"
+                android:paddingRight="20dp"
                 android:text="@string/text_license"
                 android:textColor="@color/grayLigth"
                 tools:ignore="RtlHardcoded,RtlSymmetry" />
